<resources>
    <string name="app_name">Sports7</string>
    <string name="register">register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="register_failed">Failed to register</string>
    <string name="registering">Register new user</string>
    <string name="login_failed">Login Failed</string>
    <string name="humidity">Humidity</string>
    <string name="forecast">Forecast</string>
    <string name="temperature">Temperature</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome to the null</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="item">Item</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="log_out">Log out</string>
    <string name="check_weather">Check Weather</string>
</resources>
